hellobike/yaml/kubeflow-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors-all
  namespace: kubeflow
spec:
  headers:
    accessControlAllowCredentials: "true"
    accessControlAllowHeaders:
    - '*'
    accessControlAllowMethods:
    - POST
    - OPTIONS
    - GET
    - PUT
    - HEAD
    - DELETE
    accessControlAllowOrigin: '*'
    accessControlMaxAge: 100

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubeflow-basic-auth
  namespace: kubeflow
spec:
  basicAuth:
    secret: kubeflow-basic-auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubeflow
  namespace: kubeflow
spec:
  entryPoints:
  - http
  routes:
  - kind: Rule
    match: Host(`kubeflow.hellobike.cn`)
    middlewares:
    - name: cors-all
      namespace: kubeflow
    - name: kubeflow-basic-auth
      namespace: kubeflow
    services:
    - kind: TraefikService
      name: kubeflow
  - kind: Rule
    match: Host(`kubeflow-inner.hellobike.cn`)
    middlewares:
    - name: kubeflow-basic-auth
      namespace: kubeflow
    services:
    - kind: TraefikService
      name: kubeflow
